--- a/youtube.css
+++ b/youtube.css
@@ -13,9 +13,29 @@
     width:200px;
     background-color:pink;
 }
-#content{
-    background-color: blue;
-    width: 100%;
-    height: 200px;;
 
+#page-content{
+    margin-top:20px;
+    display:flex;
+    flex-wrap: wrap;
+     width: 100%;
+    padding:50px;
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    
+    background-color:grey;
+    margin-left:30px;
+    
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  #next-btn{
+        
+
+  }
